--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -14,7 +14,9 @@ body {
   
 
   .App {
-    text-align: center;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
   }
   
   .App-logo {
@@ -24,17 +26,17 @@ body {
   
   @media (prefers-reduced-motion: no-preference) {
     .App-logo {
-      animation: App-logo-spin infinite 20s linear;
+      // animation: App-logo-spin infinite 20s linear;
     }
   }
   
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
+  .App-content {
+    background-color: pink;
+    padding: 20px;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: start;
     font-size: calc(10px + 2vmin);
     color: white;
   }
