--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -31,7 +31,7 @@ body {
   }
   
   .App-content {
-    background-color: pink;
+    background-color: #f1f2f5;
     padding: 20px;
     flex-grow: 1;
     display: flex;
